[package]
name = "starting-with-cursive-p3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owning_ref = "0.4.1"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend"]
